docs/tests/parser/edge_cases/valid/PrefixOnPrefixExpr.src
fn void test() {
    let int x = 5;
    let int y = --x;
    let int z = ++x;
    let bool b = !!true;
}
