docs/tests/parser/edge_cases/invalid/DoubleSemicolon.src
fn void test() {
    let int x = 5;;
}
